# mbit_ws_dev

./: .gitignore  interfaces_mira_build_log
install/: local_setup.sh  setup.sh
install/cpp_parameters/lib/cpp_parameters/: minimal_param_node
install/cpp_parameters/share/cpp_parameters/: package.sh  package.xml
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
install/head/lib/head/: head_move_sub  head_state_service  head_tf_move_sub
install/head/share/head/: package.bash  package.sh  package.xml  package.zsh
install/interfaces_mira/share/interfaces_mira/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/learning_tf2_cpp/lib/learning_tf2_cpp/: static_turtle_tf2_broadcaster  turtle_tf2_broadcaster
install/learning_tf2_cpp/share/learning_tf2_cpp/: local_setup.sh  package.sh  package.xml
install/learning_tf2_py/share/learning_tf2_py/: package.sh  package.xml
install/mbit_interfaces/share/mbit_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/more_interfaces/lib/more_interfaces/: publish_address_book  subscribe_address_book
install/more_interfaces/share/more_interfaces/: package.sh
install/my_package/share/my_package/: package.sh
install/polygon_base/include/polygon_base/: regular_polygon.hpp
install/polygon_base/lib/polygon_base/: area_node
log/: latest_build
src/cpp_parameters/: CMakeLists.txt
src/cpp_parameters/src/: cpp_parameters_node.cpp
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: .CMakeLists.txt.swp  CMakeLists.txt
src/cpp_srvcli/src/: .add_two_ints_client.cpp.swp  add_two_ints_client.cpp  add_two_ints_server.cpp
src/head/: package.xml  setup.py
src/head/head/: head_move_sub.py  head_state_service.py  head_tf_move_sub.py
src/interfaces_mira/: CMakeLists.mira  CMakeLists.txt  PackageList.txt  package.xml
src/interfaces_mira/action/: MiraDocking.action  MiraSendingGoals.action
src/interfaces_mira/include/interfaces_mira/: MiraGetPath.h  MiraGetPose.h  MiraGoRecharge.h  MiraRobot.h  MiraRobotCharger.h  MiraRobotDrive.h  MiraRobotDriveRos.h  MiraRobotModule.h  MiraSendingGoals.h  MiraVirtualLaser.h  ModuleFactory.h
src/interfaces_mira/src/: MiraGetPath.cpp  MiraGetPose.cpp  MiraGoRecharge.cpp  MiraRobot.cpp  MiraRobotCharger.cpp  MiraRobotDrive.cpp  MiraRobotDriveRos.cpp  MiraRobotModule.cpp  MiraSendingGoals.cpp  MiraVirtualLaser.cpp  ModuleFactory.cpp  interfaces_node.cpp
src/leanrning_tf2_py/: package.xml  setup.cfg  setup.py
src/leanrning_tf2_py/leanrning_tf2_py/: .static_turtle_tf2_broadcaster.py.swp  static_turtle_tf2_broadcaster.py
src/learning_tf2_cpp/: CMakeLists.txt
src/learning_tf2_py/: package.xml  setup.py
src/learning_tf2_py/learning_tf2_py/: static_turtle_tf2_broadcaster.py
src/mbit_interfaces/: CMakeLists.txt
src/mbit_interfaces/msg/: HeadState.msg
src/more_interfaces/: CMakeLists.txt
src/more_interfaces/src/: publish_address_book.cpp  subscribe_address_book.cpp
src/my_package/: package.xml  setup.py
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: CMakeLists.txt
src/polygon_plugins/src/: polygon_plugins.cpp
src/pugixml/: CMakeLists.txt
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py
src/py_srvcli/: package.xml  setup.py
src/python_parameters/: setup.py
src/test_py_pubsub/: package.xml  setup.py
src/tutorial_interfaces/: CMakeLists.txt
(+73 files in other folders)
