<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces_mira</name>
  <version>0.0.0</version>
  <description>Pkg for controlling the driving engine</description>
  <maintainer email="mhowecker@student.tgm.ac.at">Martin Howecker</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pugixml</depend>
  <depend>occupancy_grid_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
